--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "core-js": "^3.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2"
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -30,6 +31,7 @@
     "@types/jest": "^26.0.15",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
     "@types/redux-logger": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
@@ -54,6 +56,7 @@
     "style-loader": "^2.0.0",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.10",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.0.5",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.0",
