--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/react-redux": "^7.1.11",
+    "@types/redux-saga": "^0.10.5",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.0",
     "core-js": "^3.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.2.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -26,7 +31,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
+    "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.0",
     "@types/jest": "^26.0.15",
     "@types/react": "^16.9.56",
